--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header> 
-<img src="Colégio .jpg" alt="logo colegio estadual joão zacco paraná E.F.M.">
+<body><header> <img class="cabeçalho-imagem" src="image.png" alt="logo colégio estadual joão zacco paraná">
     <ul>
         <li>Escola</li>
         <li>Estudante</li>
