--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><header> <img class="cabeçalho-imagem" src="image.png" alt="logo colégio estadual joão zacco paraná">
+<body><header>
+    <h1>vai ser uma imagem aqui</h1>
     <ul>
         <li>Escola</li>
         <li>Estudante</li>
-    </ul></header>
-   
-    
+    </ul>
+</header>
 </body>
 </html>
