--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><header>
-    <h1>vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Escola</li>
-        <li>Estudante</li>
-    </ul>
-</header>
+<body>
+    <header class="cabeçalho" >
+    <img class="cabeçalho-imagem" src="Colégio .jpg" alt="Logo Colégio Estadual joão zacco EFMP">
+    <ul class="cabeçalho-lista" >
+        <li class="cabeçalho-lista-item" >Escola</li>
+        <li class="cabeçalho-lista-item" >Estudante</li>
+    </ul></header>
+   
+    
 </body>
 </html>
