--- a/index.html
+++ b/index.html
@@ -7,21 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header class="cabeçalho" >
-    <img class="cabeçalho-imagem" src="/tmp/guest-dewomb/Área de Trabalho/turma--main/unnamed (1).jpg" alt="Logo Colégio Estadual joao zacco EFMP">
-    <ul class="cabeçalho-lista" >
-        <li class="cabeçalho-lista-item" >Escola</li>
-        <li class="cabeçalho-lista-item" >Estudante</li>
-    </ul></header>
-<section class="Escola">
-<div class="escola-div-conteudo"></div>
-<h2 class="escola-titulo">sobre a escola</h2>
-<p class="escola-texto-um">A escola é o começo de uma grande jornada, seno nosso primeiro laboratório social e educacional. Todo nosso repertório é moldado e desenvolvido com base nas suas escolhas de estudos e matérias vistas aqui no colégio João Zacco, de onde já saíram muitas pessoas brilhantes, e, pode apostar que terá muito mais dessa escola de outro nível!</p>
-<p class="escola-texto-dois">O 2° B é uma das melhores salas, e sem dúvidas vão sair profissionais incríveis daqui!</p>
-</div>
-<img class="escola-imagem" src="file:///tmp/guest-dewomb/%C3%81rea%20de%20Trabalho/turma--main/unnamed.jpg" alt="logo-tipo-joao-zacco">
-</section> 
-
+<body><header>
+    <h1>vai ser uma imagem aqui</h1>
+    <ul>
+        <li>Escola</li>
+        <li>Estudante</li>
+    </ul>
+</header>
 </body>
 </html>
