--- a/download.html
+++ b/download.html
@@ -27,3 +27,16 @@
 
 </body>
 </html>
+<section class="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-todos">
+    <span></span>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="TDHA-750x410.jpg" alt="foto do aluno 1">
+        <h3 class="estudante-nome">Nome 1</h3>
+        
+         </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="mqdefault.jpg" alt="foto da aluno2 ">
+        <h3 class="estudante-nome">nome 2</h3>
+       </div>
